--- a/index.html
+++ b/index.html
@@ -1,89 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>PRIMA</title>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+    <link rel="stylesheet" href="css/welcome.css"> <!-- Resource style -->
+    <link rel="stylesheet" href="css/ccm.css"> <!-- Resource style -->
 
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/welcome.css" rel="stylesheet">
+    <script src="js/modernizr.js"></script> <!-- Modernizr -->
 
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
+    <title>PRIMA</title>
 </head>
-
 <body>
-  <div id="preloader">
-      <div class="loader">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-      </div>
-  </div>
-  <header class="cd-header">
-      <!--<div class="cd-logo"><a href="#home"><img src="img/logo.png" height="40" alt="Logo"></a></div>-->
-      <!-- cd-nav -->
-      <a class="cd-primary-nav-trigger" href="javascript:void(0);">
-          </span><span class="cd-menu-icon"></span>
-      </a> <!-- cd-primary-nav-trigger -->
-  </header>
-  <!-- /Header -->
-  <!-- cd-primary-nav -->
-  <nav>
-      <ul class="cd-primary-nav">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#features">Our Features</a></li>
-          <li><a href="#how-it-works">How it Works</a></li>
-          <li><a href="#our-stats">Our Stats</a></li>
-          <li><a href="#screenshots">Recent Photos</a></li>
-          <li><a href="#our-pricing">Our Plans</a></li>
-          <li><a href="#feedback">Feedback</a></li>
-          <li><a href="#download-app">Download</a></li>
+<header class="cd-header">
+    <div class="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
 
-          <li class="cd-label">Follow us</li>
+    <nav>
+        <ul class="cd-secondary-nav">
+            <li><a href="#0">Log In</a></li>
+            <li><a href="#0">Register</a></li>
+        </ul>
+    </nav> <!-- cd-nav -->
 
-          <li class="cd-social cd-facebook"><a href="#">Facebook</a></li>
-          <li class="cd-social cd-instagram"><a href="#">Instagram</a></li>
-          <li class="cd-social cd-dribbble"><a href="#">Dribbble</a></li>
-          <li class="cd-social cd-twitter"><a href="#">Twitter</a></li>
-      </ul>
-  </nav>
+    <a class="cd-primary-nav-trigger" href="#0">
+        <span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
+    </a> <!-- cd-primary-nav-trigger -->
+</header>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+<nav>
+    <ul class="cd-primary-nav">
+        <li class="cd-label">PRIMA 2017</li>
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <li><a href="#0">Programa</a></li>
+        <li><a href="#0">Registro</a></li>
+        <li><a href="#0">Conferencia Plenaria</a></li>
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
-<script src="js/jquery.appear.js"></script>
-<script src="js/main.js"></script>
 
+        <li><a href="#0">Becas</a></li>
+        <li><a href="#0">Patrocinadores</a></li>
+        <li><a href="#0">Oaxaca</a></li>
+
+        <li class="cd-label">Contacto</li>
+
+        <li class="cd-social cd-facebook"><a href="#0">Facebook</a></li>
+        <li class="cd-social cd-twitter"><a href="#0">Twitter</a></li>
+    </ul>
+</nav>
+
+<section class="cd-intro">
+    <h1>&nbsp;</h1>
+</section>
+
+
+<script src="js/jquery-2.1.1.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
