--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header class="cd-header">
-    <div class="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
+    <div class="cd-logo"><a href="#0"><img src="images/cd-logo.svg" alt="Logo"></a></div>
 
     <nav>
         <ul class="cd-secondary-nav">
