--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
 </nav>
 
 <section class="cd-intro">
-    <h1>&nbsp;</h1>
+
+    <h1><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <button type="button" class="btn btn-primary-outline">ENTRAR</button>
+    </h1>
 </section>
+
+
+
 
 
 <script src="js/jquery-2.1.1.js"></script>
