--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
     <link rel="stylesheet" href="css/welcome.css"> <!-- Resource style -->
@@ -16,19 +18,40 @@
 
     <title>PRIMA</title>
 </head>
-<body>
+<body class="cd-intro img-responsive">
+<div class="row text-center">
+    <div class="col-md-1">
+        <img src="img/im-logo.png" class="img-responsive">
+    </div>
+    <div class="col-md-2">
+        <img src="img/ccm-logo.png" class="img-responsive">
+    </div>
+    <div class="col-md-1">
+        <img src="img/academia-logo.png" class="img-responsive" >
+    </div>
+    <div class="col-md-1">
+        <img src="img/tecoax-logo.png" class="img-responsive" >
+    </div>
+    <div class="col-md-1">
+        <img src="img/conacyt-logo.png" class="img-responsive" >
+    </div>
+    <div class="col-md-1">
+        <img src="img/sociedad-logo.png" class="img-responsive" >
+    </div>
+</div>
+
 <header class="cd-header">
-    <div class="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
+   <!-- <div class="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
 
     <nav>
         <ul class="cd-secondary-nav">
             <li><a href="#0">Log In</a></li>
             <li><a href="#0">Register</a></li>
         </ul>
-    </nav> <!-- cd-nav -->
-
+    </nav> &lt;!&ndash; cd-nav &ndash;&gt;
+-->
     <a class="cd-primary-nav-trigger" href="#0">
-        <span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
+        <i class="fa fa-bars fa-3x" aria-hidden="true"></i>
     </a> <!-- cd-primary-nav-trigger -->
 </header>
 
@@ -52,10 +75,16 @@
     </ul>
 </nav>
 
+<!--
+
 <section class="cd-intro">
     <h1>&nbsp;</h1>
 </section>
+-->
 
+<div class="intro-header">
+    <img src="img/logoprima-home.png">
+</div>
 
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
