--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <body class="cd-intro img-responsive">
 <div class="row text-center">
     <div class="col-md-1">
+        <img src="img/unam-logo.png" class="img-responsive">
+    </div>
+    <div class="col-md-1">
         <img src="img/im-logo.png" class="img-responsive">
     </div>
     <div class="col-md-2">
@@ -34,6 +37,9 @@
     </div>
     <div class="col-md-1">
         <img src="img/conacyt-logo.png" class="img-responsive" >
+    </div>
+    <div class="col-md-1">
+        <img src="img/prima-logo.png" class="img-responsive" >
     </div>
     <div class="col-md-1">
         <img src="img/sociedad-logo.png" class="img-responsive" >
