Patrocinadores paginas internas

--- a/index2.html
+++ b/index2.html
@@ -95,8 +95,31 @@
     </div>
 
     <footer class="footer">
-        <div class="container">
-            <p class="lead">Place sticky footer content here.</p>
+        <div class="row text-center">
+            <div class="col-md-1 col-md-offset-1">
+                <img src="img/unam-logo.png" class="img-responsive">
+            </div>
+            <div class="col-md-1">
+                <img src="img/im-logo.png" class="img-responsive">
+            </div>
+            <div class="col-md-2">
+                <img src="img/ccm-logo.png" class="img-responsive">
+            </div>
+            <div class="col-md-1">
+                <img src="img/academia-logo.png" class="img-responsive" >
+            </div>
+            <div class="col-md-1">
+                <img src="img/tecoax-logo.png" class="img-responsive" >
+            </div>
+            <div class="col-md-1">
+                <img src="img/conacyt-logo.png" class="img-responsive" >
+            </div>
+            <div class="col-md-1">
+                <img src="img/prima-logo.png" class="img-responsive" >
+            </div>
+            <div class="col-md-1">
+                <img src="img/sociedad-logo.png" class="img-responsive" >
+            </div>
         </div>
     </footer>
 
