--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="cd-intro img-responsive">
 <div class="row text-center">
-    <div class="col-md-1">
+    <div class="col-md-1  col-md-offset-1">
         <img src="img/unam-logo.png" class="img-responsive">
     </div>
     <div class="col-md-1">
@@ -34,6 +34,9 @@
     </div>
     <div class="col-md-1">
         <img src="img/tecoax-logo.png" class="img-responsive" >
+    </div>
+    <div class="col-md-1">
+        <img src="img/cmo-logo.png" class="img-responsive" >
     </div>
     <div class="col-md-1">
         <img src="img/conacyt-logo.png" class="img-responsive" >
