--- a/index.html
+++ b/index.html
@@ -18,36 +18,38 @@
 
     <title>PRIMA</title>
 </head>
-<body class="cd-intro img-responsive">
+<body class="cd-intro">
+<br>
 <div class="row text-center">
-    <div class="col-md-1  col-md-offset-1">
-        <img src="img/unam-logo.png" class="img-responsive">
+    <div class="col-md-1  col-md-offset-1 hidden-sm hidden-xs">
+        <img src="img/unam-logo.png" class="img-responsive center-block">
     </div>
-    <div class="col-md-1">
-        <img src="img/im-logo.png" class="img-responsive">
+    <div class="col-md-1 hidden-sm hidden-xs">
+        <img src="img/im-logo.png" class="img-responsive center-block">
     </div>
-    <div class="col-md-2">
-        <img src="img/ccm-logo.png" class="img-responsive">
+    <div class="col-md-2 hidden-xs hidden-sm">
+        <img src="img/ccm-logo.png" class="img-responsive center-block">
     </div>
-    <div class="col-md-1">
-        <img src="img/academia-logo.png" class="img-responsive" >
+    <div class="col-md-1 hidden-xs hidden-sm">
+        <img src="img/academia-logo.png" class="img-responsive center-block" >
     </div>
-    <div class="col-md-1">
-        <img src="img/tecoax-logo.png" class="img-responsive" >
+    <div class="col-md-1 hidden-xs hidden-sm">
+        <img src="img/tecoax-logo.png" class="img-responsive center-block" >
     </div>
-    <div class="col-md-1">
-        <img src="img/cmo-logo.png" class="img-responsive" >
+    <div class="col-md-1 hidden-xs hidden-sm">
+        <img src="img/cmo-logo.png" class="img-responsive center-block" >
     </div>
-    <div class="col-md-1">
-        <img src="img/conacyt-logo.png" class="img-responsive" >
+    <div class="col-md-1 hidden-xs hidden-sm">
+        <img src="img/conacyt-logo.png" class="img-responsive center-block" >
     </div>
-    <div class="col-md-1">
-        <img src="img/prima-logo.png" class="img-responsive" >
+    <div class="col-md-1 hidden-xs hidden-sm">
+        <img src="img/prima-logo.png" class="img-responsive center-block" >
     </div>
-    <div class="col-md-1">
-        <img src="img/sociedad-logo.png" class="img-responsive" >
+    <div class="col-md-1 hidden-xs hidden-sm">
+        <img src="img/sociedad-logo.png" class="img-responsive center-block" >
     </div>
 </div>
+
 
 <header class="cd-header">
    <!-- <div class="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
@@ -66,9 +68,9 @@
 </header>
 
 <nav>
-    <ul class="cd-primary-nav">
+    <ul class="cd-primary-nav ">
 
-        <li><a href="#0">Programa</a></li>
+        <li><a href="#0"><strong>Programa</strong></a></li>
         <li><a href="#0">Registro</a></li>
         <li><a href="#0">Conferencia Plenaria</a></li>
 
@@ -77,10 +79,8 @@
         <li><a href="#0">Patrocinadores</a></li>
         <li><a href="#0">Oaxaca</a></li>
 
-        <li><a href="#0">Contacto</li>
+        <li><a href="#0">Contacto</a></li>
 
-        <li class="cd-social cd-facebook"><a href="#0">Facebook</a></li>
-        <li class="cd-social cd-twitter"><a href="#0">Twitter</a></li>
     </ul>
 </nav>
 
@@ -95,9 +95,12 @@
 -->
 
 <div class="intro-header">
-    <img src="img/logoprima-home.png">
+    <img src="img/logoprima-home.png" class="img-responsive center-block" >
 </div>
 
+<div class="intro-btn">
+    <button type="button" class="btn btn-primary-outline">Entrar</button>
+</div>
 
 
 
