--- a/index2.html
+++ b/index2.html
@@ -86,6 +86,99 @@
         </div>
     </div>
 
+<div class="container">
+    <table class="table table-bordered table-striped table-responsive">
+        <thead>
+        <tr>
+            <th class="text-center">Curso</th><th class="text-center">Tema</th><th class="text-center">Profesor</th><th class="text-center">Horas/Semana</th><th class="text-center">Créditos</th><th class="text-center">Asignatura</th><th class="text-center">Clave</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr><td>Análisis Real</td><td></td><td>Carlos Osvaldo Osuna Castro</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62540</td><td class="text-center">0</td></tr>
+            <tr><td>Análisis Complejo</td><td></td><td>Robert Oeckl</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62541</td><td class="text-center">0</td></tr>
+            <tr><td>Análisis Asintótico</td><td></td><td>Anatoli Merzon</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62545</td><td class="text-center">0</td></tr>
+            <tr><td>Algebra Conmutativa</td><td></td><td>Mustapha Lahyane</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62538</td><td class="text-center">0</td></tr>
+            <tr><td>Ecuaciones Diferenciales Parciales</td><td></td><td>Laura Rocio González Ramírez</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62547</td><td class="text-center">0</td></tr>
+            <tr><td>Ecuaciones Diferenciales Ordinarias</td><td></td><td>Abdon Eddy Choque Rivero</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62546</td><td class="text-center">0</td></tr>
+            <tr><td>Geometría Algebraica</td><td></td><td>Mustapha Lahyane</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62551</td><td class="text-center">0</td></tr>
+            <tr><td>Probabilidad I</td><td></td><td>Elena Kaikina</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62558</td><td class="text-center">0</td></tr>
+            <tr><td>Teoría de Gráficas</td><td></td><td>María Luisa Pérez Segui</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62553</td><td class="text-center">0</td></tr>
+            <tr><td>Topología Diferencial</td><td></td><td>Jesús Muciño Raymundo</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62562</td><td class="text-center">0</td></tr>
+            <tr><td>Topología General</td><td></td><td>Salvador García Ferreira</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62563</td><td class="text-center">0</td></tr>
+            <tr><td>Inferencia Estadistica</td><td></td><td>Eugenio Balanzario Gutierrez</td><td class="text-center">3</td><td class="text-center">6</td><td class="text-center">62549</td><td class="text-center">0</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM1">Seminario de Análisis</a></td><td>Análisis de Fourier en Teoría de Números</td><td>Mouvariz Garaev</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62569</td><td class="text-center">T002</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM2">Seminario de Análisis</a></td><td>Noncommutative Kähler Structures and Spectral Triples</td><td>Elmar Wagner</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62569</td><td class="text-center">T003</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM3">Seminario de ecuaciones diferenciales ordinarias y parciales</a></td><td>Estudio de campos neurales</td><td>Laura Rocion González Ramírez</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62575</td><td class="text-center">T001</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM4">Seminario de Matemáticas Discretas</a></td><td>Gráficas aleatorias</td><td>Eugenio Balanzario Gutierrez</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62584</td><td class="text-center">T002</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM5">Seminario de probabilidad</a></td><td>Teorema del limite central</td><td>Pavel Naumkin</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62587</td><td class="text-center">T002</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM6">Seminario de probabilidad</a></td><td>Teorema de continuidad de Levy y leyes estables e infinitamente divisibles</td><td>Pavel Naumkin</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62587</td><td class="text-center">T003</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM7">Seminario de topología</a></td><td>Enseñar tectónicas avanzadas del metodo de forcing</td><td>Michael Hrusak</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62593</td><td class="text-center">T004</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#SEM8">Seminario de topología</a></td><td>Amenabilidad y teoría de Ramsey</td><td>Ulises Ariet Ramos García</td><td class="text-center">2.5</td><td class="text-center">5</td><td class="text-center">62593</td><td class="text-center">T004</td></tr>
+
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO1">Curso Avanzado de Algebra</a></td><td>Funtores de Green de biconjuntos y las construcciones "mas"</td><td>Alberto Gerardo Raggi Cárdenas</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62564</td><td class="text-center">T002</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO2">Curso Avanzado de Algebra</a></td><td>Combinatoria Algebraica</td><td>Ernesto Vallejo Ruíz</td><td class="text-center">3</td><td class="text-center">6</td><td class="text-center">62565</td><td class="text-center">T001</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO3">Curso Avanzado de Algebra</a></td><td>Teoría de Representaciones de Algebras</td><td>Leonardo Salmeron Castro</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62564</td><td class="text-center">T003</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de topología</a></td><td>Cohomología, Clases Características y Variedades</td><td>Noe Barcenas Torres</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62591</td><td class="text-center">T027</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de topología</a></td><td>Introducción a la Teoría de Nudos</td><td>Juan Athziri González Lémus</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62591</td><td class="text-center">T001</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de topología</a></td><td>Haces Fibrados</td><td>Daniel Juan Pineda</td><td class="text-center">3</td><td class="text-center">6</td><td class="text-center">62592</td><td class="text-center">T003</td></tr>
+
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de geometría</a></td><td>Curso de Geometría algebraica y diferencial compleja</td><td>Luis Abel Castorena Martínez</td><td class="text-center">3</td><td class="text-center">6</td><td class="text-center">62580</td><td class="text-center">T003</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de geometría</a></td><td>Geometría Algebraica Moderna</td><td>Mustapha Lahyane</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62579</td><td class="text-center">T012</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de geometría</a></td><td>Grupo modular de Teichmüller y el espacio de Teichmüller</td><td>Jesús Hernández Hernández</td><td class="text-center">3</td><td class="text-center">6</td><td class="text-center">62580</td><td class="text-center">T013</td></tr>
+
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de análisis</a></td><td>La función zeta de Riemann</td><td>Moubariz Garaev</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62567</td><td class="text-center">T006</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de análisis</a></td><td>Teoría de distribuciones</td><td>Anatoli Merzon</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62567</td><td class="text-center">T007</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de análisis</a></td><td>Marcos continuas en espacios de Krein</td><td>Elmar Wagner</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62567</td><td class="text-center">T008</td></tr>
+
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de matemáticas discretas</a></td><td>Geometría Computacional</td><td>Miguel Raggi y Edgardo Roldan</td><td class="text-center">3</td><td class="text-center">6</td><td class="text-center">63583</td><td class="text-center">T001</td></tr>
+            <tr><td><a href="#" data-toggle="modal" data-target="#CURSO4">Curso avanzado de ecuaciones diferenciales ordinarias y parciales </a></td><td>Transformada de Fourier</td><td>Anatoli Merzon</td><td class="text-center">4.5</td><td class="text-center">9</td><td class="text-center">62573</td><td class="text-center">T004</td></tr>
+
+
+        </tbody>
+    </table>
+</div>
+
+  <!-- Modal Barcenas -->
+  <div class="modal fade" id="T033" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Curso avanzado de topología<br>
+                      <span class="text-muted">Temas avanzados de topología algebraica</span>
+                  </h4>
+              </div>
+              <div class="modal-body">
+                  <h3>Noé Barcenas Torres</h3>
+                  <br><br>
+                  <table class="table table-striped">
+                      <tbody>
+                      <tr>
+                          <th><i class="icon-file"></i> Objetivo</th>
+                          <td>El  objetivo  del  curso  es  dotar a  los  alumnos  de  conocimientos  avanzados  de  topología  algebraica, reforzando  los  conocimientos  del  curso  básico.</td>
+                      </tr>
+                      <tr>
+                          <th><i class="icon-file"></i> Temario</th>
+                          <td>De  acuerdo  al  interés  de  la  audiencia: Cohomología,  introducción  a la  teoría  de  Clases  características,  Aspectos  básicos de  Espectros y  teoría  de  homotopía  estable, Cálculo  con  sucesiones  espectrales.</td>
+                      </tr>
+                      <tr>
+                          <th><i class="icon-file"></i> Bibliografía</th>
+                          <td>Milnor  y  Stasheff. Characteristic  Classes, <br />
+                              Adams. Stable homotopy  and  generalised  cohomology. <br />
+                              Dold. Lectures  on  algebraic  topology</td>
+                      </tr>
+                      <tr>
+                          <th><i class="icon-file"></i> Requisitos</th>
+                          <td>Conocimientos  de  homología (Curso  básico).</td>
+                      </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
     <div class="container">
         <div class="page-header">
             <h1>Sticky footer with fixed navbar</h1>
@@ -110,6 +203,9 @@
             </div>
             <div class="col-md-1">
                 <img src="img/tecoax-logo.png" class="img-responsive" >
+            </div>
+            <div class="col-md-1">
+                <img src="img/cmo-logo.png" class="img-responsive" >
             </div>
             <div class="col-md-1">
                 <img src="img/conacyt-logo.png" class="img-responsive" >
